# f21nl-cw2

./: .editorconfig  .gitignore  pyproject.toml  requirements.txt
src/f21nl/: callbacks.py  data_preparation.py  datamodule.py  dataset.py  decoding_strategies.py  interfaces.py  test.py  train.py
src/f21nl/lightning_modules/: nmt_seq2seq.py
src/f21nl/model_components/: decoder.py  encoder.py  encoder_decoder.py
